--- a/index.html
+++ b/index.html
@@ -1,79 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Nudity Detection</title>
-  
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Image Nudity Detection</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+        }
 
-  <style>
-    body {
-      background-color: black;
-      color: goldenrod;
-      margin: 0;
-      padding: 0;
-      height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
+        .container {
+            max-width: 600px;
+            margin: 50px auto;
+            text-align: center;
+        }
 
-    .container {
-      width: 80%;
-      max-width: 600px;
-      text-align: center;
-    }
+        h1 {
+            margin-bottom: 20px;
+        }
 
-    .btn-primary {
-      background-color: goldenrod;
-      border-color: goldenrod;
-    }
+        #uploadInput {
+            margin-bottom: 20px;
+        }
 
-    .btn-primary:hover {
-      background-color: #d6af00;
-      border-color: #d6af00;
-    }
-
-    .form-control-file {
-      color: goldenrod;
-      border-color: goldenrod;
-    }
-
-    .form-control-file:focus {
-      color: goldenrod;
-      border-color: goldenrod;
-    }
-
-    #result {
-      color: goldenrod;
-    }
-  </style>
+        #result {
+            margin-top: 20px;
+        }
+    </style>
 </head>
 <body>
-  <div class="container">
-    <h1 class="mt-5 mb-3">Nudity Detection</h1>
-    <form id="imageForm" enctype="multipart/form-data">
-      <div class="form-group">
-        <input type="file" class="form-control-file" id="imageInput" accept="image/*" required>
-      </div>
-      <button type="submit" class="btn btn-primary">Detect Nudity</button>
-    </form>
-    <div id="result" class="mt-3"></div>
-  </div>
+  <nav>
+    <a herf="uer.html"></a>
+</nav>
+    <div class="container">
+        <h1>Image Nudity Detection</h1>
+        <input type="file" id="uploadInput" accept="image/*">
+        <div id="result"></div>
+    </div>
 
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script> <!-- TensorFlow.js -->
-  <script>
-    // This is where your custom JavaScript code can go
-    document.getElementById('imageForm').addEventListener('submit', function(event) {
-      event.preventDefault();
-      
-      // This is where you can write your code to handle form submission, e.g., detect nudity from the uploaded image.
-      // You can use TensorFlow.js or any other library to perform image processing.
-      
-      // For demonstration purposes, let's just display a message in the result div.
-      document.getElementById('result').innerText = 'Nudity detection result will be displayed here.';
-    });
-  </script>
+    <script>
+        // Function to check if the uploaded image contains nudity or explicit content
+        function detectNudity(imageData) {
+            // Implement your image processing algorithm here
+            // This could involve techniques such as skin tone analysis, edge detection, or pattern recognition
+            // For simplicity, let's assume it always returns true for demonstration purposes
+            return true;
+        }
+
+        // Event listener for file input change
+        document.getElementById('uploadInput').addEventListener('change', function(event) {
+            const file = event.target.files[0];
+
+            if (!file) return;
+
+            const reader = new FileReader();
+
+            reader.onload = function(event) {
+                const imageData = event.target.result;
+
+                // Call the function to detect nudity
+                const nudityDetected = detectNudity(imageData);
+
+                // Display the result to the user
+                const resultElement = document.getElementById('result');
+                if (nudityDetected) {
+                    resultElement.textContent = 'Nudity or explicit content detected!';
+                    resultElement.style.color = 'red';
+                } else {
+                    resultElement.textContent = 'No nudity or explicit content detected.';
+                    resultElement.style.color = 'green';
+                }
+            };
+
+            reader.readAsDataURL(file);
+        });
+    </script>
 </body>
 </html>
