--- a/index.html
+++ b/index.html
@@ -16,6 +16,14 @@
       margin-bottom: 20px;
     }
 
+    #imageUrl {
+      width: 100%;
+      padding: 10px;
+      font-size: 16px;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+    }
+
     /* Custom styles for result section */
     #result {
       margin-top: 20px;
@@ -24,6 +32,8 @@
     .alert {
       padding: 15px;
       border-radius: 5px;
+      font-size: 18px;
+      font-weight: bold;
     }
 
     .alert-success {
@@ -36,6 +46,21 @@
       background-color: #f8d7da;
       border-color: #f5c6cb;
       color: #721c24;
+    }
+
+    /* Button styles */
+    button {
+      padding: 10px 20px;
+      background-color: #007bff;
+      color: #fff;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      font-size: 18px;
+    }
+
+    button:hover {
+      background-color: #0056b3;
     }
   </style>
 </head>
@@ -74,10 +99,12 @@
     }
 
     function isImageNude(img) {
+      // Placeholder for nudity detection algorithm
+      // This is a very basic example and not suitable for real-world use
       var width = img.width;
       var height = img.height;
 
-      // Simple check based on image dimensions
+      // Check if image width or height exceeds certain thresholds
       // Adjust thresholds based on your requirements
       if (width > 800 || height > 600) {
           return true;
