--- a/index.html
+++ b/index.html
@@ -119,5 +119,6 @@
       resultDiv.className = isNude ? 'alert alert-danger' : 'alert alert-success';
     }
   </script>
+  <script data-name="BMC-Widget" data-cfasync="false" src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js" data-id="muhammedadan" data-description="Support me on Buy me a coffee!" data-message="Thank You" data-color="#5F7FFF" data-position="Right" data-x_margin="18" data-y_margin="18"></script>
 </body>
 </html>
